updated by release process

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,9 @@
+version 2013-12-12
+    Check for listid of 0 to work-around bug in phplist, Mantis 16940
+
 version 2013-11-05
-      Removed key and related processing
-      Added command line processing of process.php
+    Removed key and related processing
+    Added command line processing of process.php
 
 version 2013-11-01
     2013-11-01  Added to GitHub
