--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,11 @@
+version 2.3.0+20160304
+      Simplify use of panels
+      Handle pending autoresponders within process queue hook instead of as a page
+      Show the number of subscribers ready to be sent
+      Remove unused methods
+      Move view files to separate directory
+      Coding standards changes
+
 version 2.2.2+20160226
       Leave campaign at 'sent' status
       Coding standards changes
