--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+version 2.3.3+20170127
+      Improve handling of missing attribute.
+      Coding standards changes.
+
 version 2.3.2+20160527
       Add class map
 
