--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+version 3.0.2+20180225
+      On the Manage page
+      - Show the number of subscribers to which an autoresponder has been sent.
+      - Display a toolbar
+
 version 3.0.1+20180224
       On the Manage page display the number of subscribers not ready to send.
       Minor improvements to the Manage page.
