--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+version 3.3.1+20200713
+      Revise dependencies and installation instructions.
+
 version 3.3.0+20200517
       Remove 'notsent' rows from usermessage table only for subscribers who are now ready to be sent the campaign.
       Update PHP CS Fixer
