--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+version 3.6.1+20221231
+      Avoid php 8 deprecation of dynamic properties
+
 version 3.6.0+20221127
       Ensure that $selectedSubscribers is set for all autoresponder campaigns to handle the case of a campaign being requeued manually.
       Refactor to allow logging of queries
