--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+version 3.6.4+20251204
+      Fix an error in the adjustment of a campaign's finish sending time
+      CS fixer
+
 version 3.6.3+20240315
       Correct the pagination
       Remove caching of results of getAutoresponders()
